Added 2 basic endpoints
